* PlayerManager:
	- GetRandomCollectibleOwner
	- GetRandomTrinketOwner
* ItemPool:
	- AddCollectible
	- AddTemporaryCollectible
	- RemoveTemporaryCollectible
* ItemConfig_Item:
	- Add/RemoveCustomTag
	- Add/RemoveCustomCacheTag
* HUD:
	- GetStackedStreakSprite
	- GetPlayerStreakSprite
* PlayerHUD:
	- GetIndex
	- GetLayout
* Room:
	- TriggerOutput(RoomEventOutput GroupIdx)
* RoomConfig:
	- AddRooms
* RoomConfigSet:
	- AddRooms
* FXLayers:
	- AddPoopFx(ColorMod Color)
* Weapon:
	- GetMainEntity
		Returns active entity used by weapon (Brimstone - EntityLaser, Mom's Knife -  EntityKnife and etc.)
* MenuManager:
	- IsActive: returns true when MenuManager is ready to be used a.k.a if you can use the menuman functions (normally, if you are at the main menu)
* CharacterMenu
	- GetPlayerTypeFromCharacterMenuID(int CharacterMenuID, bool Tainted)
		Tainted boolean defaults to current menu if unspecified.
* Players.xml
	- Added support for modded/text trinkets on the "trinket" param (I forgot trinkets existed tbh, lol)
	- Added "hideachievement" attribute, which hides the character from the character select menu until the corresponding achievement is obtained
		(Doesn't do anything for tainted characters, since whether or not they appear on the menu is entirely dependant on the non-tainted character)
* ModCallbacks:
	- MC_PRE_PLAYER_POCKET_ITEMS_SWAP(EntityPlayer player)
		Triggers when the player swaps their pocket items using the action drop button (even if they are empty).
		Return true to cancel pocket item swap.
	- MC_PRE_TRIGGER_BED_SLEEP_EFFECT(EntityPlayer player)
		Triggers if "SleepFillHP" item overlay sprite's event is triggered, and before the hearts addition is applied.
		Return true to cancel vanilla behavior.
	- MC_PRE_BED_SLEEP(EntityPlayer player, EntityPickup bed)
		Triggers on bed collision and before playing sleep sequence.
		Return true to cancel vanilla behavior.